--- a/src/assets/reset.css
+++ b/src/assets/reset.css
@@ -1,15 +1,20 @@
-*{margin:0; padding:0;}
-li{
-    list-style: none;
+* {
+	margin: 0;
+	padding: 0;
 }
-a{
-    text-decoration: none;
-    color: #333;
+li {
+	list-style: none;
+}
+a {
+	text-decoration: none;
+	color: #333;
 }
 
-em,i{
-    font-style: normal;
+em,
+i {
+	font-style: normal;
 }
-body{
-    font-size: .16rem;
+body {
+	font-size: 0.16rem;
+	background: rgb(234, 236, 238);
 }
